--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Coin Tracker</title>
 </head>
 <body>
     <h1>Crypto Coin Tracker</h1>
     <form action="/" method="POST">
+        <input type="text" name="amount" placeholder="Quantity">
         <select name="crypto" >
             <option value="BTC">Bitcoin</option>
             <option value="ETH">Ethereum</option>
@@ -27,6 +29,8 @@
 
 
     </form>
+
+    <footer>&copy; Biniyam Alemu 2019</footer>
     
 </body>
 </html>
